Fixing overflow issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -401,3 +401,9 @@ footer i {
     }
 
 }
+
+/*-------------------------------------------------*/
+/*FIXING OVERFLOW ISSUES*/
+body {
+    overflow-x: hidden;
+}
